table-scrollbar is fixed

--- a/app/assets/stylesheets/subject.css
+++ b/app/assets/stylesheets/subject.css
@@ -230,10 +230,6 @@ body {
 
 }
 
-.table-responsive {
-  height: 725px;
-}
-
 .cssload-loader {
   width: 146px;
   height: 146px;
